--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,12 @@ body {
     font-size: 16px;
     font-family: 'Euclid Circular A', sans-serif;
 }
-
+.tokenomics{
+    text-align: center; 
+    background-color: black; 
+    border-radius: 20px; 
+    padding: 50px;
+}
 img {
     max-width: 100%;
     height: auto;
@@ -1349,6 +1354,8 @@ section {
 
 #about-area-two {
     padding: 100px 0;
+    text-align: center;
+    justify-content: center;
 }
 
 
